--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,12 +12,17 @@
 }
 .background{
     width:100%;
-    height: 1000%;
+    height: 100%;
     background-color: blue;
+    top:-60px;
+    img{
+        width: 1800px;
+        height: 600px;
+    }
 }
 
 .instructions{
-    top: 20px;
+    top: 30px;
     right:50px;
     font-size: 20px;
     cursor: default;
@@ -26,53 +31,119 @@
 #pauseButton{
     transform: translate(-50%, 0);
     left: 50%;
-    top: 20px;
+    top: 30px;
     cursor: pointer;
     height: 40px;
     width: 40px;
 }
-#pauseHeading{
-    color: white;
-    font-size: 70px;
-    cursor: default;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.obj{
-    top: 460px;
-    left: 1000px;
-    background-color: red;
-    height: 70px;
-    width: 70px;
+.pauseMenu{
+left: 50%;
+p{
+        transform: translate(-50%, 0);
+        color: white;
+        font-size: 70px;
+        cursor: default;
+        top: 70px;
+    }
+    button{
+        transform: translate(-50%, 0);
+        top: 170px;
+        cursor: pointer;
+        height: 50px;
+        width: 200px;
+        font-size: 20px;
+    }
 }
 .score{
     color: white;
-    top: 20px;
-    left:20px;
+    top: 30px;
+    left:80px;
     font-size: 20px;
     cursor: default;
 }
+.logo{
+    top: 20px;
+    left: 20px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    &:hover {
+        animation-name: logoAnimation;
+        animation-duration: 1200ms;
+        animation-fill-mode: forwards;
+    }
+}
+@keyframes logoAnimation {
+    0% {
+        transform: rotateX(360deg);
+    }
 
+    50% {
+        transform: rotateX(0deg);
+    }
+
+    100% {
+        transform: rotateY(360deg);
+    }
+}
 .gameOver{
     color: white;
-    top: 150px;
+    top: 70px;
     left:50%;
     font-size: 20px;
     width:500px;
     cursor: default;
-    transform: translate(-50%, -50%);
     h1{
         font-size: 70px;
+        transform: translate(-50%, 0);
+        color:red;
     }
     p{
         font-size: 30px;
-        top:200px;
+        top:150px;
+        transform: translate(-50%, 0);
     }
     button{
         font-size: 30px;
-        top:250px;
+        top:200px;
         cursor: pointer;
+        transform: translate(-50%, 0);
+        border-radius:5px;
+        border: 1px solid rgba(0, 0, 0, 0.3);
+        width: 300px;
+        &:hover{
+            background-color: red;
+        }
     }
 
+}
+
+.instructionsImg{
+    width: 630px;
+    height: 250px;
+    top: 100px;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
+.keys{
+    img, button{
+        width: 80px;
+        height: 80px;
+        cursor: pointer;
+    }
+    button{
+        background-color: aquamarine;
+    }
+}
+
+
+@media screen and (max-height: 700px) {
+    .keys{
+        opacity: 0.5;
+    }
+    .logo {
+        width: 40px;
+        height: 40px;
+    }
 }
