--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,4 @@
 .playerImg{
-    width:110px;
-    height: 150px;
     top:400px;
     left:100px;
 }
@@ -52,6 +50,9 @@
         height: 50px;
         width: 200px;
         font-size: 20px;
+        &:hover{
+            background-color: red;
+        }
     }
 }
 .score{
@@ -145,5 +146,11 @@
     .logo {
         width: 40px;
         height: 40px;
+    }
+    #pauseButton {
+        transform: unset;
+        left: unset;
+        top: 70px;
+        right: 20px;
     }
 }
