--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: bradley hand, cursive;
+    //font-family: 'palatino', sans-serif;
     position: fixed;
 }
