--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,7 +89,7 @@
 
 <p class="facts" *ngIf="showFacts">{{ chickenFact }}</p>
 <a
-  href="https://phil1436.github.io/"
+  href="https://philipp-bonin.com/"
   class="by"
   *ngIf="showFacts || gameOver || paused"
   >by Philipp B.</a
