--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
   <b style="color: #01fa8f; right: 20px" #mInstruction>M</b>
 </div>
 <img src="{{ pauseImg }}" (click)="pause()" #pauseButton id="pauseButton" />
-<img src="assets/logo.png" class="logo" (click)="restart()" />
+<img src="assets/logo_text.png" class="logo" (click)="restart()" />
 <div class="score">
   <p>Score: {{ score }}</p>
 </div>
