--- a/src/app/obstacle/obstacle.component.html
+++ b/src/app/obstacle/obstacle.component.html
@@ -1,7 +1,14 @@
-<div
+<img
+  [src]="url"
+  [style.top]="y"
+  [style.left]="x"
+  [style.width]="width"
+  [style.height]="height"
+/>
+<!-- <div
   [style.top]="y"
   [style.left]="x"
   [style.width]="width"
   [style.height]="height"
   [style.background-color]="color"
-></div>
+></div> -->
